--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <title>Asplay</title>
+  <meta name="google-site-verification" content="y4eAIT7hwWZKxca3A56bxlB3mEZ3TEKG96cvKqBJaIU" />
 </head>
 
 <body>
